Fixes overflow containers causing horizontal scrolling

--- a/app/assets/stylesheets/shared/layout.scss
+++ b/app/assets/stylesheets/shared/layout.scss
@@ -23,9 +23,9 @@
   height: auto !important;
   height: 100%;
   /* Negative indent footer by its height */
-  margin: 0 auto -150px;
+  margin: 0 auto -100px;
   /* Pad bottom by footer height */
-  padding: 0 0 150px;
+  padding: 0 0 100px;
 }
 
 #wrap > .container {
@@ -33,14 +33,9 @@
 }
 
 #footer {
-  height: 150px;
+  height: 100px;
   background-color: #303030;
   color: #FFF;
-  text-align: center;
-
-  >.container {
-    padding: 30px 0px;
-  }
 
   .footer-logo {
     margin: 0 auto;
